# DirectoryChangesWatcher

./: CMakeLists.txt
api/: CMakeLists.txt
api/include/: directorychangesexception.h  directorychangeshandler.h  directorychangestype.h  directorychangeswatcher.h  directorycontentreader.h  fileinfo.h  filerenamer.h  utils.h
api/include/linux/: utils.h
api/include/private/linux/: directorychangeswatcher_p.h
api/include/private/windows/: directorychangeswatcher_p.h
api/include/windows/: utils.h
api/src/: directorychangesexception.cpp  directorychangeshandler_common.cpp  directorychangeswatcher_common.cpp  directorycontentreader_common.cpp
api/src/linux/: directorychangeshandler.cpp  directorychangeswatcher.cpp  directorycontentreader.cpp  filerenamer.cpp  utils.cpp
api/src/windows/: directorychangeshandler.cpp  directorychangeswatcher.cpp  directorycontentreader.cpp  filerenamer.cpp  utils.cpp
app/: CMakeLists.txt  main.cpp  qml.qrc
app/include/: fileinfowrapper.h  filerenamer.h  filesmodel.h  qdirectorychangescontroller.h  qdirectorychangeswatcher.h  qdirectorycontentreader.h  urltopathformatter.h
app/qml/: main.qml
app/qml/Controls/Base/: AppButton.qml  AppDelegate.qml  AppLabel.qml  AppPanel.qml  AppRectangle.qml  AppTableView.qml  qmldir
app/qml/Controls/Impl/: Content.qml  Footer.qml  Header.qml  TableViewCellDelegate.qml  TableViewDarkStyle.qml  TableViewEditableCellDelegate.qml  qmldir
app/qml/Theme/: Theme.qml
app/src/: fileinfowrapper.cpp  filerenamer.cpp  filesmodel.cpp  qdirectorychangescontroller.cpp  qdirectorychangeswatcher.cpp  qdirectorycontentreader.cpp  urltopathformatter.cpp
tests/: CMakeLists.txt
tests/apitest/: CMakeLists.txt  main.cpp
tests/apitest/src/: basetest.cpp  basetest.h  directorychangeswatcher_tst.cpp  directorychangeswatcher_tst.h  directorycontentreader_tst.cpp  directorycontentreader_tst.h  testmanager.cpp  testmanager.h
